# docs/openapi.json
@@ -6,6 +6,46 @@
     "version": "0.7.0"
   },
   "paths": {
+    "/api/v1/runs/{run_id}/claim-review-coverage": {
+      "get": {
+        "tags": [
+          "claim review"
+        ],
+        "summary": "Coverage",
+        "operationId": "coverage_api_v1_runs__run_id__claim_review_coverage_get",
+        "parameters": [
+          {
+            "name": "run_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "title": "Run Id"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/runs/{run_id}/claims/{claim_id}/review-packet/export": {
       "get": {
         "tags": [
